--- a/index-card.html
+++ b/index-card.html
@@ -37,7 +37,7 @@ transform: rotate(357deg);
   }
 	
   .bigimg2{
-	background: #f6d654 url(assets/img/index2.jpg) no-repeat;
+	background: url(assets/img/index2.jpg) no-repeat;
 	background-attachment:fixed;}
 	
  .bigimg2 p  {
@@ -70,7 +70,7 @@ transform: rotate(357deg);
 	
   
   .bigimg4{
-	background: #f6d654 url(assets/img/index4.jpg) no-repeat;}
+	background: url(assets/img/index4.jpg) no-repeat;}
 	
   .bigimg4 p  {
     font-size:30px;
