--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div id="img3" class="bigimg3 section">
 	  <p><a class="head" href="index-card.html">Смотреть открытку</a></p>
 	  <p>
-        В открытках было использвано:<br>
+        В открытках было использвана:<br>
 
 	   <a target="_blank" href="https://unsplash.com/">Графика - сайт unsplash.com</a><br>	   
 	   <a target="_blank" href="https://unsplash.com/collections/778914/christmas-traditions">новогодняя коллекция фотографий</a><br>
