--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 	color:#07425e;}	
 	
   .bigimg3 p a:hover  {
-	color:#ffa037;
-	text-shadow: 3px 3px 15px #ffffff, 5px 5px 5px #000000;
+	color:#07425e;
+	text-shadow: 3px 3px 15px #ffffff, 5px 0px 5px #000000;
 	text-decoration:none;}
 	
   .head{font-size:55px;}
