--- a/index-card.html
+++ b/index-card.html
@@ -54,7 +54,7 @@ transform: rotate(357deg);
 	
   .bigimg3{
 	background:url(assets/img/index3.jpg) no-repeat;
-	background-attachment:fixed;}
+	background-attachment:scroll;}
 	
   .bigimg3 p  {
     font-size:30px;
@@ -70,7 +70,8 @@ transform: rotate(357deg);
 	
   
   .bigimg4{
-	background: url(assets/img/index4.jpg) no-repeat;}
+	background: url(assets/img/index4.jpg) no-repeat;
+	background-attachment:fixed;}
 	
   .bigimg4 p  {
     font-size:30px;
@@ -151,7 +152,7 @@ transform: rotate(357deg);
 		anchors: ['1', '2', '3', '4'],
 		menu: '#menu',
 		css3:false,
-		scrollingSpeed: 1000
+		scrollingSpeed: 1500
 	});
 
 </script>
