--- a/index-card.html
+++ b/index-card.html
@@ -10,7 +10,10 @@
 
   <style>
   body{
-   background-color:#000000;
+   background: url(assets/img/body.jpg) no-repeat;
+   background-attachment:fixed;
+   background-position:center;  
+   background-color:#c0c0c0;
    color: #ffffff;
    margin:0;
    padding:0;}
@@ -98,7 +101,8 @@ transform: rotate(357deg);
 
  </head>
  <body id="top">
-  <div id="fullpage">
+ 
+  <!-- <div id="fullpage">
     <div class="bigimg1 section"><p>С Новым 2018 годом!</p></div>
     <div id="img2" class="bigimg2 section">
 	   <p>
@@ -145,7 +149,7 @@ transform: rotate(357deg);
         И подарков воз оставит!<br>
       </p>
    </div>	
-  </div>  
+  </div> -->  
       <script type="text/javascript" src="assets/js/javascript.fullPage.js"></script>
    <script type="text/javascript">
 	fullpage.initialize('#fullpage', {
