--- a/index-card.html
+++ b/index-card.html
@@ -102,7 +102,7 @@ transform: rotate(357deg);
  </head>
  <body id="top">
  
-  <!-- <div id="fullpage">
+  <div id="fullpage">
     <div class="bigimg1 section"><p>С Новым 2018 годом!</p></div>
     <div id="img2" class="bigimg2 section">
 	   <p>
@@ -149,7 +149,8 @@ transform: rotate(357deg);
         И подарков воз оставит!<br>
       </p>
    </div>	
-  </div> -->  
+  </div>  
+  
       <script type="text/javascript" src="assets/js/javascript.fullPage.js"></script>
    <script type="text/javascript">
 	fullpage.initialize('#fullpage', {
