--- a/index-card.html
+++ b/index-card.html
@@ -30,11 +30,11 @@
 	
 -moz-transform: rotate(357deg);
 -webkit-transform: rotate(357deg);
--o-transform: rotate(357deg) scale(1, 1);
+-o-transform: rotate(357deg);
 transform: rotate(357deg);
 
     margin:0px;
-    padding-top:350px;
+    padding-top:180px;
 	padding-left:0px;
 	padding-right:200px;
   }
@@ -103,7 +103,7 @@ transform: rotate(357deg);
  <body id="top">
  
   <div id="fullpage">
-    <div class="bigimg1 section"><p>С Новым 2018 годом!</p></div>
+    <div class="bigimg1 section"><p>С наступающим Новым 2018 годом!</p></div>
     <div id="img2" class="bigimg2 section">
 	   <p>
 	     Поздравляю с Новым годом!<br>
