--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 	padding-right:200px;
 	padding-bottom:0px;}
 
-  .bigimg3 p a  {
+  .bigimg3 p a {
 	color:#07425e;}	
 	
-  .bigimg3 p a:hover  {
+  .bigimg3 p a:hover {
 	color:#07425e;
 	text-shadow: 3px 3px 15px #ffffff, 5px -3px 7px #000000;
 	text-decoration:none;}
 	
-  .head{font-size:55px;}
+  .head_text {font-size:55px;}
   </style>
   
 
@@ -55,7 +55,7 @@
   <div id="fullpage">
 
     <div id="img3" class="bigimg3 section">
-	  <p><a class="head" href="index-card.html">Смотреть открытку</a></p>
+	  <p><a class="head_text" href="index-card.html">Смотреть открытку</a></p>
 	  <p>
         В открытках были использованы:<br>
 
